syntax = "proto3";

package config;

option go_package = "github.com/fishdivinity/BeeCount-Cloud/common/proto/config";

// 导入 common 包
import "common/common.proto";

// 配置项消息
message ConfigItem {
  string key = 1;
  string value = 2;
  string type = 3; // string, int, bool, etc.
}

// 配置请求
message GetConfigRequest {
  repeated string keys = 1; // 可选，指定要获取的配置项，为空则获取所有
}

// 配置响应
message GetConfigResponse {
  map<string, ConfigItem> configs = 1;
  string version = 2;
}

// 监听配置请求
message WatchConfigRequest {
  repeated string keys = 1; // 可选，指定要监听的配置项，为空则监听所有
}

// 配置变更通知
message ConfigChangeEvent {
  string key = 1;
  ConfigItem old_value = 2;
  ConfigItem new_value = 3;
  string version = 4;
  string timestamp = 5;
}

// 重新加载配置请求
message ReloadConfigRequest {
}

// 启动服务请求
message StartServiceRequest {
  string service_name = 1;
  map<string, string> params = 2;
}

// 启动服务响应
message StartServiceResponse {
  bool success = 1;
  string message = 2;
  int32 pid = 3;
}

// 配置服务接口
service ConfigService {
  // 获取配置
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  // 监听配置变更
  rpc WatchConfig(WatchConfigRequest) returns (stream ConfigChangeEvent);
  // 重新加载配置
  rpc ReloadConfig(ReloadConfigRequest) returns (common.Response);
  // 启动服务
  rpc StartService(StartServiceRequest) returns (StartServiceResponse);
}
